syntax = "proto3";

package posts;

option go_package = "./proto;posts";

service Posts {
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Read(ReadRequest) returns (ReadResponse) {};
    rpc Update(UpdateRequest) returns (UpdateResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc List(ListRequest) returns (ListResponse) {};
}

message LinkPreview {
    string url = 1;
    string title = 2;
    string description = 3;
    string image = 4;
}

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string author_name = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    LinkPreview link_preview = 8;
}

message CreateRequest {
    string title = 1;
    string content = 2;
    string author_id = 3;
    string author_name = 4;
}

message CreateResponse {
    Post post = 1;
}

message ReadRequest {
    string id = 1;
}

message ReadResponse {
    Post post = 1;
}

message UpdateRequest {
    string id = 1;
    string title = 2;
    string content = 3;
}

message UpdateResponse {
    Post post = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {}

message ListRequest {
    int32 page = 1;
    int32 limit = 2;
}

message ListResponse {
    repeated Post posts = 1;
    int32 total = 2;
    string message = 3;
}